# wheel-leg-robot

./: .gitignore  README.md
raw_model_files/: wheel_leg.SLDASM  底轮.SLDPRT  腿.SLDPRT  身体.SLDPRT
wheel-leg_ws/src/fdilink_ahrs-demo/: CMakeLists.txt  wheeltec_udev.sh
wheel-leg_ws/src/fdilink_ahrs-demo/launch/: ahrs_driver.launch  tf.launch
wheel-leg_ws/src/fdilink_ahrs-demo/src/: ahrs_driver.cpp  imu_tf.cpp
wheel-leg_ws/src/kinematics_3dof/: CMakeLists.txt  package.xml
wheel-leg_ws/src/kinematics_3dof/src/: kinematics_3dof.cpp
wheel-leg_ws/src/usb_can/: CMakeLists.txt  package.xml
wheel-leg_ws/src/usb_can/include/: usb_can.h
wheel-leg_ws/src/usb_can/src/: usb_can.cpp
wheel-leg_ws/src/wheel_leg/: CMakeLists.txt  package.xml
wheel-leg_ws/src/wheel_leg/config/: plotjuggler_layout.xml  robot_control.yaml
wheel-leg_ws/src/wheel_leg/include/: kinematics.h
wheel-leg_ws/src/wheel_leg/launch/: amcl_demo.launch  balance_control.launch  display.launch  gazebo.launch  move_base.launch.xml  robot_amcl.launch.xml  robot_setup.launch
wheel-leg_ws/src/wheel_leg/meshes2/: base_link.STL  link_left_leg1.STL  link_left_leg2.STL  link_left_wheel.STL  link_right_leg1.STL  link_right_leg2.STL  link_right_wheel.STL
wheel-leg_ws/src/wheel_leg/msg/: Balance.msg  Footprint.msg
wheel-leg_ws/src/wheel_leg/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
wheel-leg_ws/src/wheel_leg/scripts/: LIPM_3D.py  balance_observer.py  control_assign.py  gait_planner.py  joints_traj.py  odom_topic_to_tf.py  ratio_receive.py  roll_control.py
wheel-leg_ws/src/wheel_leg/simulink/: control_parameter.m  lqr_control.slx  read_bag.m
wheel-leg_ws/src/wheel_leg/src/: biped_control_node.cpp  kinematics.cpp  lqr_control_node.cpp
wheel-leg_ws/src/wheel_leg/urdf/: rqt_gui.perspective  sick_tim.urdf.xacro  urdf.rviz  wheel_leg.gazebo  wheel_leg_stl.xacro
wheel-leg_ws/src/wheel_leg/worlds/: helloworld.world  sloap.world  terrain.world
wheel-leg_ws/src/wheel_leg3/: CMakeLists.txt  package.xml  urdf.rviz
wheel-leg_ws/src/wheel_leg3/config/: joint_names_wheel_leg3.yaml  robot_control.yaml
wheel-leg_ws/src/wheel_leg3/launch/: balance_control.launch  display.launch  gazebo.launch  robot_control.launch  robot_setup.launch
wheel-leg_ws/src/wheel_leg3/meshes/: base_link.STL  base_link.dae  link_leg1.STL  link_leg1.dae  link_leg2.STL  link_leg2.dae  link_wheel1.STL  link_wheel1.dae  link_wheel2.STL  link_wheel2.dae
wheel-leg_ws/src/wheel_leg3/scripts/: balance_control.py  balance_observer.py  control_assign.py  odom_topic_to_tf.py
wheel-leg_ws/src/wheel_leg3/simulink/: control_parameter.m  lqr_control.slx
wheel-leg_ws/src/wheel_leg3/urdf/: rqt_gui.perspective  urdf.rviz  wheel_leg3.csv  wheel_leg3.gazebo  wheel_leg3.xacro  wheel_leg3_dae.xacro  wheel_leg3_stl.xacro
wheel-leg_ws/src/wheel_leg3/worlds/: helloworld.world
