<package>
  <name>wheel_leg</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for wheel_leg</p>
    <p>This package contains configuration data, 3D models and launch files
for wheel_leg robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roslaunch</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>gazebo</run_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <run_depend>rrbot_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>usb_can</run_depend>

  <build_depend>serial</build_depend>
  <build_depend>usb_can</build_depend>

  <export>
    <architecture_independent />
  </export>
</package>